# Multi-Agent-Hiring-Pipeline

./: .env.example  .gitignore  CHALLENGES.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_sse.py
alembic/: env.py
alembic/versions/: 49fde827afb1_add_hruser.py  556619640823_add_created_by_to_runs.py  a3c1f8e2b7d4_add_scored_candidate_details.py  f88976fc0f06_add_pipeline_models.py
app/: config.py  dependencies.py  main.py
app/agents/: base.py  candidate_scorer.py  jd_analyser.py  outreach_drafter.py  planner.py
app/api/: auth.py  routes_audit.py  routes_candidates.py  routes_pipeline.py  routes_review.py
app/evaluation/: geval.py  thresholds.py
app/infra/: db.py  redis_client.py  tracing.py  vector_store.py
app/ingestion/: __init__.py  profile_extractor.py  resume_parser.py  watcher.py
app/llm/: provider_adapter.py
app/mcp_servers/candidate_db_server/: server.py
app/mcp_servers/email_server/: server.py
app/mcp_servers/jd_parser_server/: server.py
app/orchestration/: events.py  state_machine.py  task_graph.py
app/schemas/: candidate.py  eval.py  jd.py  outreach.py
frontend/: app.js  index.html  style.css
scripts/: patch_app.py  run_eval_report.py  seed_candidates.py  seed_templates.py  test_candidate_scorer.py  test_jd_analyser.py
tests/unit/: test_candidate_scorer.py  test_jd_analyser.py  test_scored_candidate_persistence.py
